# Auth-Demo

./: .gitignore  AZURE_STARTUP_CONFIG.md  README.md  main.py  pyproject.toml  requirements.txt  run.py  startup.py  startup.sh  web.config
.github/workflows/: azure-deploy.yml
templates/: base.html  configure.html  dashboard.html  error.html  index.html  oauth2.html  oidc.html  saml.html
